Update CollectorQestions